# s2-from-aws

./: README_devcontainer.md  index.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
